--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://thumbs.dreamstime.com/z/diet-healthy-eating-conceptual-design-meal-plan-written-small-shoots-natural-food-words-made-photos-white-122515189.jpg"
     />
     <title>Meal App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -22,7 +22,10 @@
     <div class="wrapper">
       <div class="favourite">
         <!-- Link to go to Favourite List -->
-        <a href="favourite.html" target="_blank" style="text-decoration: none"
+        <a
+          href="pages/favourite.html"
+          target="_blank"
+          style="text-decoration: none"
           >Go to Favourites</a
         >
       </div>
@@ -37,6 +40,6 @@
         <!-- Contains different Meals -->
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
