--- a/pages/favourite.html
+++ b/pages/favourite.html
@@ -8,7 +8,7 @@
       href="https://thumbs.dreamstime.com/z/diet-healthy-eating-conceptual-design-meal-plan-written-small-shoots-natural-food-words-made-photos-white-122515189.jpg"
     />
     <title>Favourite</title>
-    <link rel="stylesheet" href="favourite.css" />
+    <link rel="stylesheet" href="../css/favourite.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -17,6 +17,6 @@
   <body>
     <h1 class="heading">Favourite List</h1>
     <div class="container"></div>
-    <script src="favourite.js"></script>
+    <script src="../js/favourite.js"></script>
   </body>
 </html>
