--- a/pages/meal.html
+++ b/pages/meal.html
@@ -8,7 +8,7 @@
       href="https://thumbs.dreamstime.com/z/diet-healthy-eating-conceptual-design-meal-plan-written-small-shoots-natural-food-words-made-photos-white-122515189.jpg"
     />
     <title>Meal</title>
-    <link rel="stylesheet" href="meal.css" />
+    <link rel="stylesheet" href="../css/meal.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -47,6 +47,6 @@
         </a>
       </div>
     </div>
-    <script src="meal.js"></script>
+    <script src="../js/meal.js"></script>
   </body>
 </html>
